--- a/FYPPacketSniffer/app/src/main/res/layout/tab_one.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/tab_one.xml
@@ -6,8 +6,9 @@
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="70dp"
-        android:layout_height="55dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
         android:scaleType="fitCenter" />
+
 </LinearLayout>
