--- a/FYPPacketSniffer/app/src/main/res/layout/layout_devicelistitem.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/layout_devicelistitem.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:weightSum="100"
     android:id="@+id/parent_layout_device"
-    android:background="@drawable/base">
+    android:background="@drawable/base_deviceconn">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
