--- a/FYPPacketSniffer/app/src/main/res/layout/activity_main.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,14 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:minHeight="?actionBarSize"
         app:tabGravity="fill"
+        app:tabMaxWidth="150dp"
+        app:tabMinWidth="150dp"
         app:tabIndicatorColor="@color/white"
         app:tabIndicatorHeight="4dp"
-        app:tabBackground="@color/colorPrimary"
+        app:tabBackground="@color/white"
         app:tabMode="fixed">
 
     </android.support.design.widget.TabLayout>
