--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_wifiinfo.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_wifiinfo.xml
@@ -14,7 +14,17 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <Button
+                android:id="@+id/refresh"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:text="Refresh"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
             <TextView
+                android:id="@+id/networkType"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -27,7 +37,7 @@
             <ListView
                 android:id="@+id/wifiList"
                 android:layout_width="match_parent"
-                android:layout_height="130dp"
+                android:layout_height="155dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"></ListView>
 
@@ -47,14 +57,21 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"></ListView>
 
-            <Button
-                android:id="@+id/refresh"
-                android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="100dp"
-                android:text="Refresh"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+                android:layout_marginLeft="10dp"
+                android:paddingTop="5dp"
+                android:text="CELL DETAILS"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="18sp" />
+
+            <ListView
+                android:id="@+id/cellList"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"></ListView>
 
         </LinearLayout>
     </ScrollView>
