--- a/FYPPacketSniffer/app/src/main/res/layout/layout_tab.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/layout_tab.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:scaleType="fitCenter" />
 
