--- a/FYPPacketSniffer/app/src/main/res/values/styles.xml
+++ b/FYPPacketSniffer/app/src/main/res/values/styles.xml
@@ -9,4 +9,8 @@
         parent="@style/Theme.AppCompat.NoActionBar">
     </style>
 
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/background_splash</item>
+    </style>
+
 </resources>
