--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_capture.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_capture.xml
@@ -10,7 +10,7 @@
         <Button android:id="@+id/sniffBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Start VPN" />
+            android:text="Start Capturing" />
 
         <TextView
             android:id="@+id/outputText"
