--- a/FYPPacketSniffer/app/src/main/res/layout/activity_main.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,9 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="75dp"
+        android:layout_height="wrap_content"
         android:minHeight="?actionBarSize"
         app:tabGravity="fill"
-        app:tabMaxWidth="75dp"
-        app:tabMinWidth="75dp"
         app:tabIndicatorHeight="0dp"
         app:tabBackground="@color/purple2"
         app:tabMode="fixed">
