--- a/FYPPacketSniffer/app/src/main/res/layout/layout_tab.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/layout_tab.xml
@@ -6,9 +6,9 @@
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="67dp"
+        android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
-        android:scaleType="fitCenter" />
+        android:scaleType="centerCrop" />
 
 </LinearLayout>
