Add Drawer ICONS
Add icon to each drawer item

--- a/FYPPacketSniffer/app/src/main/res/layout/nav_header.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/nav_header.xml
@@ -3,27 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="176dp"
-    android:background="@color/colorPrimaryDark"
+    android:background="@android:color/background_dark"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_test1" />
+        android:layout_width="78dp"
+        android:layout_height="88dp"
+        android:src="@mipmap/drawer_icon" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-smallcaps"
+        android:paddingLeft="8dp"
         android:paddingTop="8dp"
-        android:text="ANS" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="info@test1.com"/>
+        android:text="Network Sniffer"
+        android:textColor="@android:color/holo_purple"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
 
 </LinearLayout>
