--- a/FYPPacketSniffer/app/src/main/res/layout/activity_main.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:id="@+id/drawer_layout"
     android:fitsSystemWindows="true"
     tools:context="fyp.com.packetsniffer.MainActivity"
-    >
+    tools:openDrawer="start">
 
     <LinearLayout
         android:layout_height="match_parent"
@@ -15,19 +15,20 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/black"
+            android:elevation="4dp"
             android:minHeight="?attr/actionBarSize"
-            android:background="@color/colorPrimaryDark"
-            android:id="@+id/toolbar"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            android:elevation="4dp"/>
+            app:popupTheme="@style/PopupMenu"
+            app:title=" " />
 
         <FrameLayout
+            android:id="@+id/fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/fragment_container"/>
+            android:layout_height="match_parent" />
 
 
     </LinearLayout>
@@ -37,8 +38,11 @@
         android:layout_height="match_parent"
         android:id="@+id/nav_view"
         android:layout_gravity="start"
+        android:background="@color/grey"
+        app:itemTextColor="@color/black"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/draw_menu"/>
+        app:menu="@menu/drawer_menu"
+        android:theme="@style/PopupMenu"/>
 
 
 </android.support.v4.widget.DrawerLayout>
