--- a/FYPPacketSniffer/app/src/main/res/values/colors.xml
+++ b/FYPPacketSniffer/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="grey">#E3E3E3</color>
+    <color name="light_grey">#F6F6F6</color>
+    <color name="dark_grey">#797979</color>
 </resources>
