--- a/FYPPacketSniffer/app/src/main/res/values/styles.xml
+++ b/FYPPacketSniffer/app/src/main/res/values/styles.xml
@@ -2,6 +2,7 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+        <item name="android:windowNoTitle">true</item>
         <!-- Customize your theme here. -->
     </style>
 
@@ -9,6 +10,12 @@
         parent="Theme.AppCompat.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="PopupMenu">
+        <item name="android:textColorSecondary">@color/dark_grey</item>
+        <item name="android:listDivider">@color/black</item>
+
     </style>
 
 </resources>
