Add Files Without History

--- a/FYPPacketSniffer/app/src/main/res/values/colors.xml
+++ b/FYPPacketSniffer/app/src/main/res/values/colors.xml
@@ -2,6 +2,9 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="blue_magenta">#5B39C6</color>
+    <color name="purple">#58218B</color>
+    <color name="purple2">#D886F1</color>
 </resources>
