--- a/FYPPacketSniffer/app/src/main/res/values/styles.xml
+++ b/FYPPacketSniffer/app/src/main/res/values/styles.xml
@@ -7,8 +7,10 @@
 
     <style name="MyToolbarTheme"
         parent="@style/Theme.AppCompat.NoActionBar">
-        <item name="windowNoTitle">true</item>
-        <item name="android:windowNoTitle">true</item>
+    </style>
+
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/background_splash</item>
     </style>
 
 </resources>
