--- a/FYPPacketSniffer/app/src/main/res/values/colors.xml
+++ b/FYPPacketSniffer/app/src/main/res/values/colors.xml
@@ -11,4 +11,8 @@
     <color name="blue_magenta">#5B39C6</color>
     <color name="purple">#58218B</color>
     <color name="purple2">#D886F1</color>
+    <color name="background_color">#121025</color>
+    <color name="wifi_info_1">#202677</color>
+    <color name="wifi_info_2">#021C68</color>
+    <color name="wifi_text_1">#7091BE</color>
 </resources>
