--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_device_connect.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_device_connect.xml
@@ -7,28 +7,23 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="30dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/wifiName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:maxWidth="200dp"
             android:minWidth="50dp"
             android:text="SSID"
-            android:textSize="19sp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="30dp"
+            android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
-        <TextView
-            android:id="@+id/numDevices"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Number of devices"
-            app:layout_constraintTop_toBottomOf="@+id/wifiName"/>
         <Button
             android:id="@+id/startScan"
             android:layout_width="wrap_content"
@@ -39,20 +34,7 @@
 
     </android.support.constraint.ConstraintLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/percentText"
-        android:text="10%"/>
-    <ProgressBar
-        android:id="@+id/percentBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:progress="10"
-        android:max="100"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        style="?android:attr/progressBarStyleHorizontal" />
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_Net"
