--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_analysis.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_analysis.xml
@@ -5,10 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/cmd_prompt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -19,22 +15,42 @@
             android:text="Start Capturing"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
+        <EditText
+            android:id="@+id/jump_page"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sniffBtn"/>
+        <Button
+            android:id="@+id/jump_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Jump To Page"
+            app:layout_constraintTop_toBottomOf="@+id/sniffBtn"
+            app:layout_constraintLeft_toRightOf="@+id/jump_page"/>
 
     </android.support.constraint.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="125dp">
+        android:orientation="vertical">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/output_content"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="400dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"/>
+        <TextView
+            android:id="@+id/num_page"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No of Pages"
+            android:layout_gravity="center"/>
 
     </LinearLayout>
+
 
 
 
