--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_capture.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_capture.xml
@@ -1,20 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:overScrollMode="never">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <Button android:id="@+id/sniffBtn"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Start Capturing" />
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/capture_num"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
+                android:textSize="20sp"
+                android:hint="eg.1000"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <Button android:id="@+id/capture_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:text="Start" />
+            <Spinner
+                android:id="@+id/capture_interface"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
+                app:layout_constraintTop_toBottomOf="@+id/capture_num"
+                app:layout_constraintLeft_toRightOf="@id/capture_text_interface"/>
+
+            <TextView
+                android:id="@+id/capture_text_interface"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/capture_num"
+                android:hint="Available Interfaces:"
+                android:textSize="20sp"/>
+
+        </android.support.constraint.ConstraintLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/capture_output"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"/>
 
         <TextView
-            android:id="@+id/outputText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:id="@+id/capture_num_page"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="No. of pages"/>
+
     </LinearLayout>
-</ScrollView>
+
+</android.support.v4.widget.NestedScrollView>
