--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_capture.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_capture.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:overScrollMode="never">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    android:orientation="vertical">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -43,16 +39,6 @@
                 android:layout_marginTop="10dp"
                 android:text="Start Capture" />
 
-            <Button
-                android:id="@+id/capture_refresh_pages"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/capture_interface"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="10dp"
-                android:text="refresh"
-                />
-
             <Spinner
                 android:id="@+id/capture_interface"
                 android:layout_width="150dp"
@@ -72,11 +58,6 @@
 
         </android.support.constraint.ConstraintLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/capture_output"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"/>
-
         <TextView
             android:id="@+id/capture_num_page"
             android:layout_width="wrap_content"
@@ -84,6 +65,10 @@
             android:layout_gravity="center"
             android:text="No. of pages"/>
 
-    </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/capture_guide"
+            android:text="Guide for capturing files"/>
 
-</android.support.v4.widget.NestedScrollView>
+</LinearLayout>
