--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_analysis.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_analysis.xml
@@ -59,24 +59,32 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:animateLayoutChanges="true">
-
-                <TextView
+                <android.support.constraint.ConstraintLayout
                     android:id="@+id/analyse_filter_text"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:paddingLeft="20dp"
-                    android:text="Filters"
-                    android:textSize="20sp"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    android:layout_height="50dp"
+                    android:background="@color/black"
+                    app:layout_constraintTop_toTopOf="parent">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:paddingLeft="20dp"
+                        android:text="Filters"
+                        android:textSize="20sp"
+                        app:layout_constraintTop_toTopOf="parent"/>
 
-                <ImageButton
-                    android:id="@+id/analyse_view_filters_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:background="@mipmap/view_filters_btn"/>
+                    <ImageButton
+                        android:id="@+id/analyse_view_filters_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:background="@mipmap/view_filters_btn"/>
+
+
+                </android.support.constraint.ConstraintLayout>
+
 
                 <RadioGroup
                     android:id="@+id/analyse_filter_options"
