--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_analysis.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_analysis.xml
@@ -167,6 +167,15 @@
                         android:layout_marginTop="10dp"
                         android:layout_marginLeft="10dp" />
 
+                    <android.support.v7.widget.AppCompatRadioButton
+                        android:id="@+id/filter_9"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/filter_9"
+                        android:textSize="15sp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp" />
+
                 </RadioGroup>
 
             </android.support.constraint.ConstraintLayout>
