--- a/FYPPacketSniffer/app/src/main/res/layout/activity_main.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/black"
+            android:background="@color/primaryColor"
             android:elevation="4dp"
             android:minHeight="?attr/actionBarSize"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
