--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_device_connect.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_device_connect.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/black">
+    android:background="@color/background_color">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black">
+        android:background="@color/primaryDarkColor">
 
 
         <TextView
@@ -23,6 +23,7 @@
             android:textSize="19sp"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="30dp"
+            android:textColor="@color/white"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -40,6 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Number of devices"
+            android:textColor="@color/white"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/wifiName"/>
 
@@ -58,7 +60,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/percentText"
-        android:text="10%"/>
+        android:text="10%"
+        android:textColor="@color/white"/>
     <ProgressBar
         android:id="@+id/percentBar"
         android:layout_width="match_parent"
