--- a/FYPPacketSniffer/app/src/main/res/layout/layout_devicelistitemold.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/layout_devicelistitemold.xml
@@ -24,7 +24,7 @@
             android:paddingBottom="3dp"
             android:singleLine="true"
             android:text="Host Name"
-            android:textColor="@color/design_default_color_primary_dark"
+            android:textColor="@color/primaryDarkColor"
             android:textSize="16sp"
             android:textStyle="bold"
             tools:layout_editor_absoluteX="0dp"
@@ -39,7 +39,7 @@
             android:paddingBottom="5dp"
             android:singleLine="true"
             android:text="Vendor"
-            android:textColor="@color/design_default_color_primary_dark"
+            android:textColor="@color/primaryDarkColor"
             android:textSize="12sp"
             app:layout_constraintStart_toEndOf="@+id/hostname"
             tools:layout_editor_absoluteY="0dp" />
@@ -52,7 +52,7 @@
             android:paddingTop="5dp"
             android:paddingBottom="10dp"
             android:text="IP address"
-            android:textColor="@color/design_default_color_primary_dark"
+            android:textColor="@color/primaryDarkColor"
             android:textSize="12sp"
             app:layout_constraintTop_toBottomOf="@+id/hostname" />
 
