--- a/FYPPacketSniffer/app/src/main/res/layout/nav_header.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/nav_header.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="176dp"
-    android:background="@android:color/background_dark"
+    android:background="@color/primaryColor"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="16dp"
@@ -21,7 +21,7 @@
         android:paddingLeft="8dp"
         android:paddingTop="8dp"
         android:text="Network Sniffer"
-        android:textColor="@android:color/holo_purple"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold" />
 
