--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_network_utils.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_network_utils.xml
@@ -1,12 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/network_util_recyclerview"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="300dp">
+        <TextView
+            android:id="@+id/network_utils_option_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Option Title"
+            android:textSize="25sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="30dp"
+            android:gravity="center_horizontal"/>
+        <EditText
+            android:id="@+id/network_utils_input_edittext"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            app:layout_constraintTop_toBottomOf="@+id/network_utils_option_text"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:gravity="center_vertical"
+            android:layout_marginTop="10dp"/>
+        <TextView
+            android:layout_width="370dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/network_utils_input_edittext"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:gravity="center_vertical"/>
+
+    </android.support.constraint.ConstraintLayout>
+    <ListView
+        android:id="@+id/network_utils_listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </LinearLayout>
