--- a/FYPPacketSniffer/app/src/main/res/layout/layout_network_utils_item.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/layout_network_utils_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="60dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/black">
+    android:background="@color/primaryDarkColor">
 
         <TextView
             android:id="@+id/network_util_option"
