--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_analysis_report.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_analysis_report.xml
@@ -4,11 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:nestedScrollingEnabled="true">
+    android:nestedScrollingEnabled="true"
+    android:background="@color/backgroundColor">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        
         <TextView
             android:id="@+id/report_select_file_text"
             android:layout_width="wrap_content"
