--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_network_trace_route.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_network_trace_route.xml
@@ -4,7 +4,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/backgroundColor">
 
     <EditText
         android:id="@+id/trace_route_edit_text"
