--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_network_utils.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_network_utils.xml
@@ -3,10 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/backgroundColor">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/network_util_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
