--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_analysis.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_analysis.xml
@@ -3,7 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/backgroundColor">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -73,7 +75,7 @@
                     android:id="@+id/analyse_filter_text"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:background="@color/black"
+                    android:background="@color/primaryDarkColor"
                     app:layout_constraintTop_toTopOf="parent">
                     <TextView
                         android:layout_width="match_parent"
