--- a/FYPPacketSniffer/app/src/main/res/layout/layout_directory_list.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/layout_directory_list.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="50dp"
+    android:background="@color/backgroundColor">
 
     <TextView
         android:id="@+id/directory_text"
