--- a/FYPPacketSniffer/app/src/main/res/menu/drawer_menu.xml
+++ b/FYPPacketSniffer/app/src/main/res/menu/drawer_menu.xml
@@ -7,7 +7,8 @@
         <item
             android:id="@+id/scan_devices"
             android:icon="@mipmap/device_conn"
-            android:title="Scan Network" />
+            android:title="Scan Network"
+            android:checked="true"/>
         <item
             android:id="@+id/wifi_details"
             android:icon="@mipmap/wifi_details"
