--- a/FYPPacketSniffer/app/src/main/res/values/colors.xml
+++ b/FYPPacketSniffer/app/src/main/res/values/colors.xml
@@ -3,18 +3,12 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#000000</color>
-    <color name="white">#FFFFFF</color>
     <color name="blue_magenta">#5B39C6</color>
     <color name="purple">#58218B</color>
     <color name="purple2">#D886F1</color>
-    <color name="black">#000000</color>
     <color name="grey">#E3E3E3</color>
     <color name="light_grey">#F6F6F6</color>
     <color name="dark_grey">#797979</color>
-    <color name="background_color">#121025</color>
-    <color name="wifi_info_1">#202677</color>
-    <color name="wifi_info_2">#021C68</color>
-    <color name="wifi_text_1">#7091BE</color>
     <color name="white_color">#ffffff</color>
     <color name="light_grey_color">#aeadad</color>
     <color name="grey_color">#575757</color>
@@ -32,16 +26,20 @@
     <color name="transparent_dark_color">#bb000000</color>
 
 
+
     <color name="primaryColor">#691b9a</color>
     <color name="primaryLightColor">#9b4dcc</color>
     <color name="primaryDarkColor">#37006b</color>
-    <color name="primaryTextColor">#ffffff</color>
-    <color name="secondaryTextColor">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="backgroundColor">#121025</color>
+    <color name="wifi_info_1">#202677</color>
+    <color name="wifi_info_2">#021C68</color>
+    <color name="wifi_text_1">#7091BE</color>
 
 
 
 
-    <color name="secondaryColor">#00c9b4</color>
-    <color name="secondaryLightColor">#60fde6</color>
-    <color name="secondaryDarkColor">#009784</color>
+
+
 </resources>
