--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_network_trace_route.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_network_trace_route.xml
@@ -7,12 +7,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="10dp">
         <TextView
             android:id="@+id/trace_route_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxWidth="250dp"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="40dp"
             android:textSize="25sp"
