--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_device_connect.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_device_connect.xml
@@ -40,10 +40,11 @@
             android:id="@+id/numDevices"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
             android:text="Number of devices"
             android:textColor="@color/white"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/wifiName"/>
+            app:layout_constraintTop_toBottomOf="@+id/wifiName" />
 
         <ImageButton
             android:id="@+id/startScan"
