--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_analysis.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_analysis.xml
@@ -35,6 +35,7 @@
             android:textSize="25dp"
             android:maxLines="1"
             android:ellipsize="end"
+            android:textColor="@color/white"
             app:layout_constraintLeft_toRightOf="@id/analyse_select_file"
             app:layout_constraintTop_toTopOf="parent"
             android:text="@string/select_file"/>
@@ -70,7 +71,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:animateLayoutChanges="true">
+                android:animateLayoutChanges="true"
+                android:background="@color/textBGColor">
                 <android.support.constraint.ConstraintLayout
                     android:id="@+id/analyse_filter_text"
                     android:layout_width="match_parent"
@@ -83,6 +85,7 @@
                         android:layout_marginTop="10dp"
                         android:paddingLeft="20dp"
                         android:text="Filters"
+                        android:textColor="@color/white"
                         android:textSize="20sp"
                         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -104,7 +107,8 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     app:layout_constraintTop_toBottomOf="@+id/analyse_filter_text"
-                    app:layout_constraintLeft_toLeftOf="parent">
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:background="@color/textBGColor">
 
                     <android.support.v7.widget.AppCompatRadioButton
                         android:id="@+id/filter_1"
@@ -114,7 +118,8 @@
                         android:textSize="15sp"
                         android:layout_marginTop="10dp"
                         android:layout_marginLeft="10dp"
-                        android:checked="true"/>
+                        android:checked="true"
+                        android:textColor="@color/textColor"/>
 
                     <android.support.v7.widget.AppCompatRadioButton
                         android:id="@+id/filter_2"
@@ -123,7 +128,8 @@
                         android:text="@string/filter_2"
                         android:textSize="15sp"
                         android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp" />
+                        android:layout_marginLeft="10dp"
+                        android:textColor="@color/textColor"/>
 
                     <android.support.v7.widget.AppCompatRadioButton
                         android:id="@+id/filter_3"
@@ -132,7 +138,8 @@
                         android:text="@string/filter_3"
                         android:textSize="15sp"
                         android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp" />
+                        android:layout_marginLeft="10dp"
+                        android:textColor="@color/textColor"/>
 
                     <android.support.v7.widget.AppCompatRadioButton
                         android:id="@+id/filter_4"
@@ -141,7 +148,8 @@
                         android:text="@string/filter_4"
                         android:textSize="15sp"
                         android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp" />
+                        android:layout_marginLeft="10dp"
+                        android:textColor="@color/textColor"/>
 
                     <android.support.v7.widget.AppCompatRadioButton
                         android:id="@+id/filter_5"
@@ -150,7 +158,8 @@
                         android:text="@string/filter_5"
                         android:textSize="15sp"
                         android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp" />
+                        android:layout_marginLeft="10dp"
+                        android:textColor="@color/textColor"/>
 
                     <android.support.v7.widget.AppCompatRadioButton
                         android:id="@+id/filter_6"
@@ -159,7 +168,8 @@
                         android:text="@string/filter_6"
                         android:textSize="15sp"
                         android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp" />
+                        android:layout_marginLeft="10dp"
+                        android:textColor="@color/textColor"/>
 
                     <android.support.v7.widget.AppCompatRadioButton
                         android:id="@+id/filter_7"
@@ -168,7 +178,8 @@
                         android:text="@string/filter_7"
                         android:textSize="15sp"
                         android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp" />
+                        android:layout_marginLeft="10dp"
+                        android:textColor="@color/textColor"/>
 
                     <android.support.v7.widget.AppCompatRadioButton
                         android:id="@+id/filter_8"
@@ -177,7 +188,8 @@
                         android:text="@string/filter_8"
                         android:textSize="15sp"
                         android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp" />
+                        android:layout_marginLeft="10dp"
+                        android:textColor="@color/textColor"/>
 
                     <android.support.v7.widget.AppCompatRadioButton
                         android:id="@+id/filter_9"
@@ -186,7 +198,8 @@
                         android:text="@string/filter_9"
                         android:textSize="15sp"
                         android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp" />
+                        android:layout_marginLeft="10dp"
+                        android:textColor="@color/textColor"/>
 
                 </RadioGroup>
 
@@ -211,6 +224,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="-x"
+                        android:textColor="@color/textColor"
                         android:textSize="20sp"
                         android:layout_marginTop="10dp"
                         android:layout_marginLeft="10dp" />
@@ -219,6 +233,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="-xx"
+                        android:textColor="@color/textColor"
                         android:textSize="20sp"
                         android:layout_marginTop="10dp"
                         android:layout_marginLeft="10dp" />
@@ -227,6 +242,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="-X"
+                        android:textColor="@color/textColor"
                         android:textSize="20sp"
                         android:layout_marginTop="10dp"
                         android:layout_marginLeft="10dp" />
@@ -235,6 +251,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="-XX"
+                        android:textColor="@color/textColor"
                         android:textSize="20sp"
                         android:layout_marginTop="10dp"
                         android:layout_marginLeft="10dp" />
@@ -243,6 +260,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Normal"
+                        android:textColor="@color/textColor"
                         android:textSize="15sp"
                         android:layout_marginTop="10dp"
                         android:layout_marginLeft="10dp"
@@ -284,6 +302,7 @@
             android:id="@+id/num_page"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="No of Pages"
             android:layout_gravity="center"/>
 
@@ -292,6 +311,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="No of Packets"
+            android:textColor="@color/white"
             android:layout_gravity="center"
             android:layout_marginBottom="50dp" />
     </LinearLayout>
