--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_scan_history.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_scan_history.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Recent Scans"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:textColor="@color/white"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_history"
