--- a/FYPPacketSniffer/app/src/main/res/layout/layout_devicelistitem.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/layout_devicelistitem.xml
@@ -64,7 +64,7 @@
             android:paddingTop="5dp"
             android:paddingBottom="10dp"
             android:text="MAC address"
-            android:textColor="#A9A9A9"
+            android:textColor="@color/macAddressColor"
             android:textSize="12sp"
             app:layout_constraintStart_toEndOf="@+id/ipaddr"
             app:layout_constraintTop_toBottomOf="@+id/vendor" />
