--- a/FYPPacketSniffer/app/src/main/res/layout/layout_infoitem.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/layout_infoitem.xml
@@ -26,7 +26,7 @@
         android:fontFamily="@font/duru_sans"
         android:text="Value"
         android:textAlignment="viewEnd"
-        android:textColor="@color/wifi_text_1"
+        android:textColor="@color/textColor"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent" />
 
