--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_capture.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_capture.xml
@@ -17,6 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Directory"
+            android:theme="@style/ButtonTheme"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="Start Capture"
+            android:theme="@style/ButtonTheme"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/capture_interface" />
 
