--- a/FYPPacketSniffer/app/src/main/res/values/styles.xml
+++ b/FYPPacketSniffer/app/src/main/res/values/styles.xml
@@ -24,5 +24,13 @@
         <item name="colorControlHighlight">@color/primaryLightColor </item>
     </style>
 
+    <style name="ButtonTheme" parent="Widget.AppCompat.Button.Colored">
+        <item name="colorButtonNormal">@color/primaryLightColor</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+
+
+
 
 </resources>
