--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_device_connect.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_device_connect.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -43,7 +44,10 @@
             android:text="Number of devices"
             android:textColor="@color/white"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/wifiName"/>
+            app:layout_constraintTop_toBottomOf="@+id/wifiName"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp" />
 
         <ImageButton
             android:id="@+id/startScan"
@@ -51,7 +55,9 @@
             android:layout_height="wrap_content"
             android:background="@mipmap/refresh_scan_btn"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"/>
 
     </android.support.constraint.ConstraintLayout>
 
