--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_capture.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_packet_capture.xml
@@ -91,6 +91,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/capture_guide"
-            android:text="Guide for capturing files"/>
+            android:text="@string/captureguide"/>
 
 </LinearLayout>
