--- a/FYPPacketSniffer/app/src/main/res/layout/layout_devicelistitem.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/layout_devicelistitem.xml
@@ -29,7 +29,9 @@
             android:textSize="16sp"
             android:textStyle="bold"
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp" />
+            tools:layout_editor_absoluteY="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
             android:id="@+id/vendor"
@@ -42,7 +44,8 @@
             android:text="Vendor"
             android:textColor="@color/primaryDarkColor"
             android:textSize="12sp"
-            app:layout_constraintStart_toEndOf="@+id/hostname"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteY="0dp" />
 
         <TextView
@@ -55,7 +58,8 @@
             android:text="IP address"
             android:textColor="@color/primaryDarkColor"
             android:textSize="12sp"
-            app:layout_constraintTop_toBottomOf="@+id/hostname" />
+            app:layout_constraintTop_toBottomOf="@+id/hostname"
+            app:layout_constraintLeft_toLeftOf="parent"/>
 
         <TextView
             android:id="@+id/mac"
@@ -66,7 +70,9 @@
             android:text="MAC address"
             android:textColor="#A9A9A9"
             android:textSize="12sp"
-            app:layout_constraintStart_toEndOf="@+id/ipaddr"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/vendor" />
 
     </android.support.constraint.ConstraintLayout>
