--- a/FYPPacketSniffer/app/src/main/res/layout/layout_packet_page.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/layout_packet_page.xml
@@ -15,7 +15,7 @@
             android:id="@+id/page_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/textColor"/>
+            android:textColor="@color/white"/>
 
     </ScrollView>
 
